--- a/Fumigabot/app/src/main/res/layout/activity_sign_in.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_sign_in.xml
@@ -8,28 +8,34 @@
 
     <Button
         android:id="@+id/btnGoogleSignIn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
         android:layout_marginBottom="112dp"
-        android:backgroundTint="@color/browser_actions_title_color"
-        android:drawableStart="@mipmap/ic_google_defy"
+        android:backgroundTint="?attr/colorOnPrimary"
         android:paddingStart="16dp"
         android:text="Ingresar con Google"
         android:textAlignment="gravity"
+        android:textColor="?attr/colorPrimary"
+        app:icon="@drawable/googleg_standard_color_18"
+        app:iconTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoDefy"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/logoDefy"
-        android:layout_width="361dp"
-        android:layout_height="155dp"
+        android:layout_width="293dp"
+        android:layout_height="110dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.302"
+        app:layout_constraintVertical_bias="0.45"
         app:srcCompat="@drawable/ic_logo_completo"
         tools:srcCompat="@drawable/ic_logo_completo" />
 
