--- a/Fumigabot/app/src/main/res/layout/fragment_inicio.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_inicio.xml
@@ -113,7 +113,7 @@
                     android:maxWidth="18dp"
                     android:maxHeight="18dp"
                     android:src="@drawable/battery_full_24"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/divider"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +127,7 @@
                     android:layout_marginTop="16dp"
                     android:gravity="bottom"
                     android:text="100%"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/divider"
                     app:layout_constraintEnd_toStartOf="@+id/imagenBateria"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +144,7 @@
                     android:maxHeight="18dp"
                     android:padding="2dp"
                     android:src="@drawable/ic_science_24"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/divider"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +158,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="bottom"
                     android:text="100%"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/divider"
                     app:layout_constraintEnd_toStartOf="@+id/imagenQuimico"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
