--- a/Fumigabot/app/src/main/res/layout/fragment_step1.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_step1.xml
@@ -58,9 +58,9 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="179dp"
+            android:layout_width="wrap_content"
             android:layout_height="27dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="center"
